Final Review Complete

--- a/Demos/04-insights/InsightsDemo/WebApp/Views/Shared/_ResourceVisualization.cshtml
+++ b/Demos/04-insights/InsightsDemo/WebApp/Views/Shared/_ResourceVisualization.cshtml
@@ -33,7 +33,7 @@
         </dt>
 
         <dd>
-            <img src="@Model.previewImageUrl" alt="@Model.previewText" />        
+            @Html.DisplayFor(model => model.previewImageUrl)
         </dd>
 
         <dt>
