--- a/Demos/02-webhooks/WebhooksDemo/WebApp/Views/Subscription/Subscription.cshtml
+++ b/Demos/02-webhooks/WebhooksDemo/WebApp/Views/Subscription/Subscription.cshtml
@@ -1,6 +1,4 @@
-﻿<!--  Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license.
-        See LICENSE in the source repository root for complete license information. -->
-@model WebApp.Models.SubscriptionViewModel
+﻿@model WebApp.Models.SubscriptionViewModel
 @{
     ViewBag.Title = "Subscription";
 }
